[package]
name = "vlsp"
version = "0.1.0"
edition = "2021"
description = "Language Server Protocol implementation for VScript"
license = "MIT"
repository = "https://github.com/m-epasta/vslp"

[[bin]]
name = "vslp"
path = "src/main.rs"

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "5.5"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
url = "2.4"
regex = "1.10"
rowan = "0.15"
text-size = "1.1"
lsp-types = "0.94"
walkdir = "2.4"
ropey = "1.6"
once_cell = "1.19"
tempfile = "3.24.0"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
